# FishingForPhish

./: .gitignore  .readthedocs.yaml  FishingForPhish.py  LICENSE.md  Limitations.md  NEWrequirements.txt  Procedure.md  README.md  README.rst  TODO.txt  classes.py  example-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  structure.py
CombinedModel(3-10-2022)/: CombinedDataset.arff  combinedDatabuild.py  rename.py
CombinedModel(3-10-2022)/output/: J48  Jrip  NB
Datasets/Combined/Original/: combinedDatasetOriginal.arff
Datasets/Combined/combinedSource/: _103_58fqu.html  _105_bhqbd.html  _108_jxtz9.html  _10_csqsc.html  _110_vp76h.html  _112_mqta3.html  _113_b6ptc.html  _117_ybtnr.html  _118_rtq5j.html  _119_5kzzp.html  _11_wezdg.html  _125_gwqcv.html  _126_vfcs2.html  _128_m6446.html  _129_82trb.html  _130_27qa4.html  _131_gdzew.html  _136_n4ybj.html  _137_bvqpp.html  _139_wxek9.html  _13_y9cgp.html  _140_jwt7c.html  _142_vm7j8.html  _143_zjc2z.html  _148_634ms.html  _149_pqtn3.html  _14_rfp3r.html  _150_rgq5t.html  _152_neqkh.html  _155_9ypwm.html  _157_gjqcf.html  _159_zsea6.html  _15_zmff9.html  _160_mbqqb.html  _162_2kt9w.html  _163_gqp5a.html  _165_pdqvs.html  _169_bzt2h.html  _16_mz7z5.html  _170_4mqh9.html  (+77 more)
Datasets/Image-based/FullDataset/: Phishing_Legitimate_Images_full (2).arff  Phishing_Legitimate_Images_full.arff
Datasets/Image-based/RankedFeaturesDataset/: Phishing_Legitimate_Images_ranked (2).arff  Phishing_Legitimate_Images_ranked.arff
Datasets/Image-based/Screenshots/: URLs.txt  legitURLs.txt  newNames.txt  rename.py  scrape.py  tempDomain2URL.py
FinalModel/: J48Output  JripOutput  NBOutput  NBOutput2WConfig  tempCombinedDataset.arff
FinalModel/NamingAndURLScripts/: GetURLsFromFilenames.py  backupGetURLs.py
Models/FinalModel/ProbablyWontUse/: Combined.arff  FINALDATA(workInProgress).arff  OpenPhishPhishing2.txt  OpenPhishPhishingTrain.txt  Test.txt  Top20.arff
TODO/: databaseUpdate.py  renameSourceTest.py
Visuals/: graph.py
WebsiteAndDataCollection/: Information.md
docs/: api.rst  conf.py  index.rst  usage.rst
docs/source/: api.rst  index.rst  usage.rst
initialResearch/: FishingForPhish.md  urls.txt
initialResearch/css/: _10_7x7w6qu.css  _13_y4ujbk5w.css  _14_y4wu5f7s.css  _15_746prob.css  _18_68kqnlu.css  _1_y2raw9vv.css  _21_y58k2or8.css  _23_5ttx3qw.css  _25_76pxcm2.css  _27_ng5wuza.css  _28_ycf8p92g.css  _2_y6zmqh7e.css  _30_y4rrn44x.css  _31_mwrowbe.css  _33_y3hqp6wh.css  _34_y2h7pub2.css  _35_yxdjndqw.css  _36_ljrvmfj.css  _6_yy4hwy7w.css  _8_y3j92gso.css
initialResearch/datasets/: imageAnalyzerDataset.arff  pageAnalyzerDataset.arff  rankedDataset.arff
initialResearch/html/: _14_y4wu5f7s.html  _18_68kqnlu.html  _1_y2raw9vv.html  _21_y58k2or8.html  _23_5ttx3qw.html  _24_7dffhja.html  _27_ng5wuza.html  _29_my9ca6k.html  _31_mwrowbe.html  _33_y3hqp6wh.html  _35_yxdjndqw.html  _36_ljrvmfj.html  _3_y4uphz4c.html  _5_y2vxfqum.html  _7_7vmb533.html  _8_y3j92gso.html  _9_y9l43oqt.html
initialResearch/initialResearch/: data.db
initialResearch/initialResearch/css/: _11_86q7dlv.css  _12_kr37tl9.css  _19_nfl5pep.css  _20_c58j9ok.css  _22_klbgfs.css  _26_yxcbrm2k.css  _29_my9ca6k.css  _32_y3f5xbad.css  _37_y4xb2hro.css
initialResearch/initialResearch/datasets/: rankedDataset.arff
initialResearch/output/: J48Combined  J48Image  JripImage  NaiveBayesImage
research/CombinationCode/: combinedDatabuild.py  scrape.py  urls.txt
research/TODO/: errors.txt
research/WebsiteAndDataCollection/: tempPhishAI - Shortcut.lnk
src/: FishingForPhish.py  image.py  page.py
src/FishingForPhish/: FishingForPhish.py  image.py  newImage.py  newPage.py  page.py
tests/: postgresTest.py  requirements.txt  seleniumTest.py
tests(TODO)/: postgresTest.py  test_pytest.py
website/: app (1).py
(+180 files in other folders)
