[project]
name = "FishingForPhish"
authors = [
    {name = "Xander Kutulas", email = "Xander.Kutulas@gmail.com"},
]
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause License",
]
# TODO: Set the required-python version accurately, probably using vermin: https://github.com/netromdk/vermin
requires-python = ">=3.5"
dynamic = ["version", "description"]
