# https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
[metadata]
name = FishingForPhish
author = Xander Kutulas
author_email = Xander.Kutulas@gmail.com
url = https://github.com/xanmankey/FishingForPhish.git
version = attr: 0.1.0
description = FishingForPhish is a phishing detection framework focused on the analysis of image and page based features.
long_description = file: README.md
keywords = phishing-detection, machine learning, data analysis
license = BSD 3-Clause License
classifiers =
    {
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    }
    
[options]
packages = find:
# install_requires = TODO
python_requires = >= 3.5

[options.extras_require]
# tests = TODO
dev = 
  {
  flake8==TODO(most recent version)
  }

[options.package_data]
* = README.md

[vermin]
verbose = 1
processes = 4

[flake8]
ignore = E111,F821
max-line-length = 100
