# https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
[metadata]
name = FishingForPhish-xanmankey
author = Xander Kutulas
author_email = Xander.Kutulas@gmail.com
url = https://github.com/xanmankey/FishingForPhish.git
version = attr: 0.1.0
description = FishingForPhish is a phishing detection framework focused on the analysis of image and page based features.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = phishing-detection, machine learning, data analysis
license = BSD 3-Clause License
classifiers =
    {
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    }
    
[options]
package_dir = src
packages = find:
# install_requires = TODO
# only 3.10 has been tested
# although vermin (https://github.com/netromdk/vermin)
# returns a 3.5 minimum version
# TODO: set up continuous integration
python_requires = ">=3.10"

[options.packages.find]
where = src

[options.extras_require]
# tests = TODO
dev = 
  {
  flake8==4.0.1
  }

[options.package_data]
* = README.md

[vermin]
verbose = 1
processes = 4

[flake8]
max-line-length = 100
